--- a/sales.html
+++ b/sales.html
@@ -7,7 +7,11 @@
   <header>
     <h1>Salmon Cookie Sales</h1>
   </header>
-  <main></main>
+  <main>
+    <div id=city>
+      
+    </div>
+  </main>
   <footer></footer>
   <script src="js/app.js"></script>
 </body>
