alot more than this branch suggests. homepage,salespage setup and styles.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,59 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/homepage.css">
+  <title>Salmon Cookies</title>
 </head>
 <body>
-  <header>
-    <h1>Main page</h1>
-  </header>
-  <main>
-    <div id=city></div>
-  </main>
-  <footer></footer>
+<header>
+  <nav>
+    <a href="https://www.wildsalmon.org/about/save-our-wild-salmon-coalition.html">
+      <img src="assets/img/salmon (logo).png">
+    </a>
+    <ul>
+      <li>Seattle</li>
+      <li>Tokyo</li>
+      <li>Dubia</li>
+      <li>Paris</li>
+      <li>Lima</li>
+    </ul>
+  </nav>
+</header>
+<main>
+  <section>
+    <a href="sales.html">
+      <img src="assets/img/chinook.jpg" alt="Click for Sales Data!">
+    </a>
+    <p class="imagetext" >"Click for Sales Data!"</p>
+  </section>
+  <section>
+    <img src="assets/img/cookieCutter.jpg">
+    <img src="assets/img/frosted-cookie.jpg">
+    <img src="assets/img/schoolOfFish.jpg">
+  </section>
+  <section>
+    <img src="assets/img/family.jpg">
+    <article>
+      <h3>About Salmon Cookies!</h3>
+      <ul>
+        <li>Locations:</li>
+        <li>Seattle: 175 Henry Smith Road North Andover, MA 01845</li>
+        <li>Tokyo: 238-1291, Nishikamikawara, Shichinohe-machi Kamikita-gun, Aomori</li>
+        <li>Dubai: Lulueyah Area, KFN-Dibba Road, P.O. Box: 9970</li>
+        <li>Paris: 111 Square de la Couronne, Paris Île-de-France, 75001</li>
+        <li>Lima: Av Andrés Rázuri 199 Maranga, San Miguel,  Lima</li>
+      </ul>
+      <button>Call to Action</button>
+    </article>
+  </section>
+</main>
+  <footer>
+    <h3>Hours of Operation: 6:00am - 7:00pm</h3>
+    <a class="contact" href="https://github.com/JacobGregor">
+      <h3>Contact Us!</h3>
+    </a>
+  </footer>
   <script src="js/app.js"></script>
 </body>
 </html>
