--- a/sales.html
+++ b/sales.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/sales.css">
   <title>Salmon Cookies Sales</title>
 </head>
 <body>
   <header>
     <h1>Salmon Cookie Sales</h1>
+    <a href="index.html">
+      <img src="assets/img/chinook.jpg">
+    </a>
   </header>
   <main>
     <div id=city> 
