--- a/sales.html
+++ b/sales.html
@@ -5,17 +5,11 @@
   <title>Salmon Cookies Sales</title>
 </head>
 <body>
-  <header>
-    <h1>Salmon Cookie Sales</h1>
-    <a href="index.html">
-      <img src="assets/img/chinook.jpg">
-    </a>
-  </header>
-  <main>
-    <div id=city> 
-    </div>
-  </main>
-  <footer></footer>
+    <table id="city">
+
+
+
+    </table>
   <script src="js/app.js"></script>
 </body>
 </html>
