header to sales.html

--- a/sales.html
+++ b/sales.html
@@ -5,11 +5,26 @@
   <title>Salmon Cookies Sales</title>
 </head>
 <body>
-    <table id="city">
-
-
-
-    </table>
+  <header>
+    <nav>
+      <a href="index.html">
+        <img src="assets/img/salmon (logo).png">
+      </a>
+      <ul>
+        <li>Seattle</li>
+        <li>Tokyo</li>
+        <li>Dubia</li>
+        <li>Paris</li>
+        <li>Lima</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="Table Container">
+      <table id="city">
+      </table>
+    </section>
+  </main>
   <script src="js/app.js"></script>
 </body>
 </html>
