--- a/sales.html
+++ b/sales.html
@@ -24,6 +24,31 @@
       <table id="city">
       </table>
     </section>
+    <section class="form-container">
+      <h1>Add a Location</h1>
+      <form id="location-form">
+        <fieldset>
+          <legend>Submit your city!</legend>
+          <label >
+            City Name:
+            <input type="text" name='name'>
+          </label>
+          <label>
+            Minimum Daily Customers?
+            <input type="number" name='minCustomer'>
+          </label>
+          <label>
+            Maximum Daily Customers?
+            <input type="number" name='maxCustomer'>
+          </label>
+          <label>
+            Average Daily Cookies sold?
+            <input type="number" name='avg'>
+          </label>
+        </fieldset>
+        <button type="submit">Submit</button>
+      </form>
+    </section>
   </main>
   <script src="js/app.js"></script>
 </body>
