added homepage content

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     </section>
     <section class="cookies-section-description">
       <h1>Weve come a long way in our design!</h1>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ratione atque dolores quae tenetur ab quidem placeat dolor! Possimus repudiandae debitis consequatur dolorum laboriosam doloremque repellendus accusamus ut odio autem. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum voluptatibus a magni mollitia at? Illum, asperiores a. Ut, voluptas sunt! Molestiae expedita quae aut, corporis id incidunt facilis officia necessitatibus!</p>
+      <p>Here at Salmon Cookies we are dedicated to our craft of providing the best quality cookie every time. From our humble start to where we are now the same drive that went into the first cookie persists into every cookie we bake today! Whether you are here for your 1st or 100th Cho-CoHo-Chip welcome!
+      </p>
     </section>
   </section>
   <section class="merch-section-container">
@@ -81,8 +82,8 @@
         <img src="assets/img/shirt.jpg">
     </section>
     <section class="merch-section-description">
-      <h1>Weve come a long way in our design!</h1>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ratione atque dolores quae tenetur ab quidem placeat dolor! Possimus repudiandae debitis consequatur dolorum laboriosam doloremque repellendus accusamus ut odio autem. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum voluptatibus a magni mollitia at? Illum, asperiores a. Ut, voluptas sunt! Molestiae expedita quae aut, corporis id incidunt facilis officia necessitatibus!</p>
+      <h1>Tackle Shop</h1>
+      <p>Checkout our latest Merch! Stock is is first come first serve and sellsout fast, make sure to sign up for our mailing list to get notifications when your favorites are back in-stock.</p>
     </section>
   </section>
   <section class="about-us-container">
@@ -91,13 +92,14 @@
     </section>
     <section class="about-us-heading">
       <h1 id="about-us-target">About Salmon Cookies!</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero magni at quod vitae cupiditate, ea quos nam fugiat assumenda nesciunt facilis voluptate qui corporis impedit odit aspernatur repellat. Eveniet, recusandae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptas tempore nobis quo, natus ut reiciendis in suscipit tempora veniam, commodi magni neque provident ratione quam! Adipisci corrupti minus deleniti. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi pariatur molestias iusto quod fuga dolores impedit. Temporibus soluta fugit iste corrupti illo? Commodi nihil ad quidem laudantium! Aperiam, possimus porro.</p>
+      <p>Salmon Cookies is a PNW based company out of Seattle Washington, dedicated to our high quality design and all natural ingredients. Our designs are inspired by the beautiful King, Chinook and CoHo salmon that roam that call the Oceans and Rivers on Washington home. Come into any of our locations and ask us about how you can get involved in protecting and conserving the species and ecosystems.
+      </p>
     </section>
   </section>
   <section class="final-row-container">
     <section class="final-row-heading">
       <h1 id="final-row-target">Looking to find out more?</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero magni at quod vitae cupiditate, ea quos nam fugiat assumenda nesciunt facilis voluptate qui </p>
+      <p>Poke around our site. We have an interactive sales table that lets you submit your own Salmon Cookies location and see how it stacks up.  </p>
     </section>
   </section>
 </main>
